# jbRender

./: .gitignore  CMakeLists.txt  Scene.cpp  Scene.h  data.cpp  data.h  edge.cpp  edge.h  frame.cpp  frame.h  jbRender.cpp  maths.cpp  maths.h  object.cpp  object.h  polygon.cpp  polygon.h  program.jbr  renderer.cpp  renderer.h  stack.cpp  stack.h  timer.cpp  timer.h  tokenizer.cpp  tokenizer.h
scripts/: bouncing_ball.jbr
tests/: CMakeLists.txt  edge_edge_compare.cpp  face_vertex_compare.cpp
